# indices_view

./: .exemplar_version  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
examples/: CMakeLists.txt
include/beman/indices_view/: CMakeLists.txt  indices.hpp
infra/: .beman_submodule
infra/cmake/: use-fetch-content.cmake
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/indices_view/: CMakeLists.txt
